# raytracing-rs

./: .gitignore  Cargo.toml  README.md
renders/: multisampling.ppm  multisampling_diff.ppm  ray_test.ppm  sphere_diff.ppm  sphere_norms.ppm  sphere_test.ppm
src/: color.rs  main.rs  ray.rs  vec3.rs
src/lib/: buffered_image.rs  camera.rs  color.rs  hittable.rs  hittable_list.rs  lib.rs  math.rs  ray.rs  raytracer.rs  sphere.rs  vec3.rs
