[package]
name = "raytracing-rs"
version = "0.1.0"
authors = ["mbh95 <matthewbh95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raytrace"
path = "src/lib/lib.rs"

[[bin]]
name = "raytracer_sdl"
path = "src/bin/raytrace_sdl.rs"

[[bin]]
name = "raytracer_ppm"
path = "src/bin/raytrace_ppm.rs"

[[bin]]
name = "ppmdiff"
path = "src/bin/ppmdiff.rs"

[dependencies]
regex = "1.4.1"
rand = "0.7.3"
rayon = "1.5.0"